patch/traefik-security-headers.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: traefik-security-headers
  namespace: traefik
spec:
  headers:
    stsSeconds: 63072000 # 2 ans (exigé pour le preloading)
    stsIncludeSubdomains: true
    stsPreload: true
    forceSTSHeader: true
    browserXssFilter: true
    contentTypeNosniff: true
    frameDeny: true
